templates/css/styles.css
/* ... */
.tooltipSlider .tooltipText {
    visibility: hidden;
    width: 30px;
    background-color: #ffa507;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 53%;
    margin-left: -60px;
    opacity: 0;
    transition: opacity 1s;
    font-size: 14px;
    font-weight: 500;
}

.tooltipSlider .tooltipText::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #ffa507 transparent transparent transparent;
}

.tooltipSlider:hover .tooltipText, .tooltipSlider:target .tooltipText {
    visibility: visible;
    opacity: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .tooltipText{
        display: none !important;
    }
}


.packages_option {
    margin: 60px 0;
}
.radio-tile-group {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.radio-tile-group .input-container {
    position: relative;
    height: 17rem;
    width: 17rem;
    margin: 1rem;
}
.radio-tile-group .input-container .radio-button {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    margin: 0;
    cursor: pointer;
}
.radio-tile-group .input-container .radio-tile {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    border: 2px solid #ffa507;
    border-radius: 5px;
    padding: 1rem;
    transition: -webkit-transform 300ms ease;
    transition: transform 300ms ease;
    transition: transform 300ms ease, -webkit-transform 300ms ease;
}
.radio-tile-group .input-container .icon svg {
    fill: #ffa507;
    width: 3rem;
    height: 3rem;
}
.radio-tile-group .input-container .radio-tile-label {
    text-align: center;
    font-size: 2rem;
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #ffa507;
    margin-bottom: 15px;
    line-height: 30px;
}
.radio-tile-group .input-container .radio-button:checked + .radio-tile {
    background-color: #ffa507;
    border: 2px solid #ffa507;
    color: white;
    -webkit-transform: scale(1.1, 1.1);
    transform: scale(1.1, 1.1);
}
.radio-tile-group .input-container .radio-button:checked + .radio-tile .icon svg {
    fill: white;
    background-color: #ffa507;
}
.radio-tile-group .input-container .radio-button:checked + .radio-tile .radio-tile-label {
    color: white;
    background-color: #ffa507;
}

.btn_editGallery_custom {
    background: #f2f5f7;
    display: inline-block;
    padding: 30px 40px;
    margin-top: 15px;
    display: none;
    text-align: center;
}
.btn_editGallery_custom span {
    color: #000;
}

.backLink, .backLink:hover{
    color: #ffa507;
    font-size: 16px;
    margin-bottom: 10px;
}

.fancybox-container{
    font-family: inherit;
}

.modal-header .close{
    opacity: 1;
}

.widthAuto{
    width: auto;
}

.frm_Chat .emojionearea-editor{
    min-height: auto;
    overflow: hidden;
    max-height: 70px;
}

.canvas_wrap{
    float: left;
    margin-right: 20px;
}

